--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,10 +8,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^0.26.0",
     "next": "12.1.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "recoil": "^0.6.1"
+    "react-dom": "17.0.2"
   },
   "devDependencies": {
     "eslint": "8.10.0",
